--- a/src/main/node_client/package.json
+++ b/src/main/node_client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@stomp/stompjs": "^7.0.0",
     "sockjs-client": "^1.6.1",
+    "websocket": "^1.0.35",
     "ws": "^8.18.0"
   }
 }
